[package]
name = "emma"
version = "0.1.0"
authors = ["vedran <vinkovedran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crossbeam-channel = "0.5.0"
notify = { version = "=5.0.0-pre.5", features = ["serde"] }